scrollbar/overlap wand button issues; refactor mode-specific wand show/hide

--- a/django/chat/static/chat/style.css
+++ b/django/chat/static/chat/style.css
@@ -781,6 +781,14 @@ div#chat-toolbar {
   display: block;
 }
 
+#chat-outer.chat #chat-prompt {
+  padding-right: 30px;
+}
+
+#chat-outer.chat #magic-button {
+  display: inline-block;
+}
+
 #file-dropzone {
   height: 100%;
   width: 100%;
@@ -1273,15 +1281,16 @@ math[display="block"] {
 }
 
 #magic-button {
-  background-color: white !important;
+  background-color: transparent !important;
   color: var(--bs-secondary);
   border: none;
   top: 4px;
-  right: 42px;
+  right: 47px;
   width: 35px;
   height: 30px;
   position: absolute;
   z-index: 10;
+  display: none;
 }
 
 #magic-button:hover,
